feat: add update endpoint and its swagger documentation
